# zutil

./: .gitignore  .taplo.toml  Cargo.toml  rustfmt.toml
src/: ascii_str_arr.rs  btree_map_vector.rs  family.rs  file_lock.rs  iter.rs  keyed_par_iter.rs  kv_par_iter.rs  lib.rs
src/alphabet/: slice.rs
tests/zutil-inheritance-derive/: Cargo.toml
tests/zutil-inheritance-derive/tests/: const.rs  debug.rs  js.rs
tests/zutil-inheritance-derive/tests/failure/: missing_parent.stderr  thread_non_send.stderr  thread_non_send_child.rs  thread_non_send_child.stderr  too_many_parents.stderr
zutil-app-error/: Cargo.toml
zutil-app-error/src/: lib.rs  multiple.rs  pretty.rs
zutil-async-loadable/: Cargo.toml
zutil-async-loadable/src/: lib.rs  load_handle.rs  progress.rs  res_arc_guard.rs
zutil-async-loadable/tests/: load.rs
zutil-cloned/: Cargo.toml
zutil-cloned/src/: lib.rs
zutil-cloned/tests/: trailing_comma.rs  trailing_semi.rs
zutil-inheritance/: Cargo.toml
zutil-inheritance-macros/: Cargo.toml
zutil-inheritance-macros/src/: lib.rs  value.rs
zutil-inheritance/src/: base.rs  clone_storage.rs  debug.rs  downcast.rs  extend.rs  lib.rs  ref_count.rs  storage.rs  util.rs  value.rs  vtable.rs  weak.rs
zutil-inheritance/tests/: const.rs  debug.rs  default.rs  extend.rs  failure.rs  js.rs  thread.rs  weak.rs
zutil-inheritance/tests/failure/: missing_parent.rs  missing_parent.stderr  thread_non_send.rs  thread_non_send.stderr  thread_non_send_child.rs  thread_non_send_child.stderr  thread_non_send_parent.rs  thread_non_send_parent.stderr  too_many_parents.rs  too_many_parents.stderr  wrong_parent.rs  wrong_parent.stderr
zutil-legacy/: Cargo.toml
zutil-legacy/src/: ascii_str_arr.rs  cached_value.rs  discarding_sorted_merge_iter.rs  family.rs  file_lock.rs  io_slice.rs  iter.rs  keyed_par_iter.rs  lib.rs  null_ascii_string.rs  ok_or_return.rs  signed_hex.rs  try_into_as.rs
zutil-legacy/src/alphabet/: arr.rs  owned.rs  slice.rs
zutil-logger/: Cargo.toml
zutil-logger/src/: builder.rs  file.rs  lib.rs  pre_init.rs  term.rs
