[package]
name = "zutil-async-loadable"
version = "0.1.0"
edition = "2024"

[dependencies]

# Workspace
zutil-app-error = { workspace = true }

mappable-rc = { workspace = true }
parking_lot = { workspace = true, features = ["send_guard"] }
pin-project = { workspace = true }
stable_deref_trait = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt"] }
yoke = { workspace = true, features = ["derive"] }

[dev-dependencies]

futures = { workspace = true }
tokio = { workspace = true, features = ["macros"] }


[lints]
workspace = true
