[package]
name    = "zutil-async-loadable"
version = "0.1.0"
edition = "2024"

[dependencies]

app-error          = { workspace = true }
mappable-rc        = { workspace = true }
parking_lot        = { features = ["send_guard"], workspace = true }
pin-project        = { workspace = true }
stable_deref_trait = { workspace = true }
tokio              = { features = ["rt", "sync"], workspace = true }
yoke               = { features = ["derive"], workspace = true }

[dev-dependencies]

futures = { workspace = true }
tokio   = { workspace = true, features = ["macros"] }


[lints]
workspace = true
