[package]
name        = "zutil-cloned"
version     = "0.1.0"
description = "`#[cloned]` macro for cloning expressions"
edition     = { workspace = true }
authors     = { workspace = true }
homepage    = { workspace = true }
license     = { workspace = true }
repository  = { workspace = true }

[lib]
proc-macro = true

[dependencies]

quote = { workspace = true }
syn   = { features = ["full"], workspace = true }

[lints]
workspace = true
