[package]
authors = ["Filipe Rodrigues <filipejacintorodrigues1@gmail.com>"]
edition = "2018"
name = "zutil-legacy"
version = "0.1.0"

[dependencies]

arrayref = { workspace = true }
ascii = { workspace = true }
derive_more = { workspace = true }
eframe = { workspace = true, optional = true }
either = { workspace = true }
futures = { workspace = true, optional = true }
int-conv = { workspace = true }
log = { workspace = true }
native-dialog = { workspace = true, optional = true }
ref-cast = { workspace = true }
sealed = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
thiserror = { workspace = true }

[features]
alert = ["native-dialog"]
gui = ["eframe"]
use_futures = ["futures"]
use_serde = ["serde", "ascii/serde"]

[lints]
workspace = true
