[package]
authors = ["Filipe Rodrigues <filipejacintorodrigues1@gmail.com>"]
edition = "2018"
name    = "zutil-legacy"
version = "0.1.0"

[dependencies]

arrayref      = { workspace = true }
ascii         = { workspace = true }
derive_more   = { features = ["full"], workspace = true }
eframe        = { optional = true, workspace = true }
either        = { workspace = true }
futures       = { optional = true, workspace = true }
int-conv      = { workspace = true }
log           = { workspace = true }
native-dialog = { optional = true, workspace = true }
ref-cast      = { workspace = true }
sealed        = { workspace = true }
serde         = { features = ["derive"], optional = true, workspace = true }
thiserror     = { workspace = true }

[features]
alert       = ["native-dialog"]
gui         = ["eframe"]
use_futures = ["futures"]
use_serde   = ["serde", "ascii/serde"]

[lints]
workspace = true
