[package]
name        = "zutil-logger"
version     = "0.1.0"
description = "`tracing` logger"
edition     = { workspace = true }
authors     = { workspace = true }
homepage    = { workspace = true }
license     = { workspace = true }
repository  = { workspace = true }

[dependencies]

duplicate          = { workspace = true }
itertools          = { workspace = true }
tracing            = { features = ["log"], workspace = true }
tracing-subscriber = { features = ["env-filter"], workspace = true }
zutil-cloned       = { workspace = true }

[lints]
workspace = true
